--- a/css/style.css
+++ b/css/style.css
@@ -205,13 +205,28 @@ h6 {
   background-color: #00b6dd;
 }
 
+.btn--blue:hover {
+  -webkit-box-shadow: 0 0 5px 3px #00b6dd;
+          box-shadow: 0 0 5px 3px #00b6dd;
+}
+
 .btn--dark {
   background-color: #081580;
+}
+
+.btn--dark:hover {
+  -webkit-box-shadow: 0 0 5px 3px #081580;
+          box-shadow: 0 0 5px 3px #081580;
 }
 
 .btn--black {
   border: 1px solid #00b6dd;
   background-color: #010101;
+}
+
+.btn--black:hover {
+  -webkit-box-shadow: 0 0 5px 3px #00b6dd;
+          box-shadow: 0 0 5px 3px #00b6dd;
 }
 
 .title {
@@ -299,6 +314,7 @@ body {
 
 .hero__title {
   max-width: 46.875rem;
+  padding-bottom: 1rem;
 }
 
 .cards {
@@ -697,7 +713,7 @@ body {
         -ms-flex-pack: start;
             justify-content: flex-start;
     text-align: center;
-    padding: 0 5.375rem;
+    padding: 0 3.875rem;
     gap: 2.5rem;
   }
 
@@ -772,7 +788,7 @@ body {
   }
 
   .solutions__body {
-    padding: 0 3.75rem;
+    padding: 0 3.125rem;
   }
 
   .solutions__image {
